24 Feb 2006; Simon Kelley <simon@thekelleys.org.uk>
    
   Fixed file descriptor leak. Previously, the raw and UDP sockets were
   inherited by the dhcpcd.exe script and its children. If the children
   changed uid away from route, they would inherit otherwise unavailable
   rights to access these sockets.

   Replaced sleep() call with calls the select(). The UDP and Raw sockets
   are open at this time, so if they are no serviced, they accumulate
   large numbers of kernel-buffered packets, wasting unpageable
   memory. The new code wake dhcpcd so it can discard any recieved data.
	
** dhcpcd-2.0.1 Released

21 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Fixed gcc-4 complile warnings
    Fixed -L ConfigDir option

** dhcpcd-2.0.0 Released

21 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Applied Debian patchset 22 and tagged it
    Applied Gentoo patchset 12 and tagged it
    Trimmed crud files (dhcpcd binary, spec files, lsm files, etc )
    Moved source, dhcpcd.exe and dhcpcd.8 to src subdir
    Updated Makefile.am and configure.in for newer autotools
    Updated the manpage
    Now use ./configure --enable-debug, --enable-arp, --enable-embed
    as we no longer ship a default Makefile
    .sv files are now only created when the target is not a symbolic link

** New Maintainers -	Roy Marples <uberlord@gentoo.org>
			Simon Kelley <simon@thekelleys.org.uk> 

12/31/02 - v.1.3.22-pl4
	Peter Poeml <poeml@suse.de> submitted patches to:
	1. enable support for Token Ring.
	2. disable second DHCP_DISCOVER message. S.V - added "-S" option to dhcpcd command
	   line to make second DHCP_DISCOVER message optional.
	3. Make dhcpcd  write to the console if syslogd is not running only with
	   "-d" DebugFlag.
	Robert Whaley <rwhaley@applieddata.net> submitted patch to elimited potential
	race condition between setting up the setjmp for dhcpReboot and the sigalarm handler.
	Ian Sharpe <ian.sharpe@sharpe-practice.co.uk> submitted patch to handle situations