@@ -398,8 +398,12 @@ int dhcpConfig()
 	  fprintf(f, "# Generated by dhcpcd for interface %s\n", IfName);
 	  if ( DhcpOptions.len[dnsSearchPath] )
 	    fprintf(f,"search %s\n", (char *)DhcpOptions.val[dnsSearchPath]);
-	  else if ( DhcpOptions.len[domainName] )
-	    fprintf(f,"domain %s\n",(char *)DhcpOptions.val[domainName]);
+	  else if ( DhcpOptions.len[domainName] ) {
+		if ( strchr( (char *)DhcpOptions.val[domainName], ' ') )
+		    fprintf(f,"search %s\n",(char *)DhcpOptions.val[domainName]);
+		else
+		    fprintf(f,"domain %s\n",(char *)DhcpOptions.val[domainName]);
+	  }
 	  
 	  for (i=0;i<DhcpOptions.len[dns];i+=4)
 	    fprintf(f,"nameserver %u.%u.%u.%u\n",
